2026-02-05T01:13:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21694863113 # 868
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-05
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-16 2026-01-17 2026-01-18 2026-01-19 2026-01-20] / []

2026-02-04T01:13:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21654369905 # 867
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-03T01:17:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21612841387 # 866
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-18] / []

2026-02-02T01:17:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21574019662 # 865